Summary: Add support for Mellanox Spectrum based platforms as part of FBOSS agent
  1. Agent init/deinit using SDK-like XML for ports configuration
  2. Physical port configuration/state: admin/operative state and speed
  3. Port vlan membership configuration via JSON configuration file
  4. Basic L2 traffic (LLDP)

Signed-off-by: Stepan Blyschak <stepanb@mellanox.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ option(BUILD_PLATFORM "platform")
 if(${BUILD_PLATFORM} MATCHES "wedge")
   set(BUILD_WEDGE ON)
   message(STATUS "Build FBOSS for Wedge platform")
+elseif(${BUILD_PLATFORM} MATCHES "mlnx")
+  set(BUILD_MLNX ON)
+  message(STATUS "Build FBOSS for Mellanox platform")
 endif()
 
 # Ideally, we would use
@@ -336,6 +339,8 @@ if(BUILD_WEDGE)
     include(fboss/agent/platforms/wedge/CMakeLists.txt)
     include(fboss/qsfp_service/platforms/wedge/CMakeLists.txt)
     include(fboss/util/CMakeLists.txt)
+elseif(BUILD_MLNX)
+    include(fboss/agent/platforms/mlnx/CMakeLists.txt)
 endif()
 
 # Unit Testing
