Summary: Change the way L3 packet is sent from FBOSS agent
In order to trigger L3 forwarding in HW the following method was used in FBOSS:
packet is sent with source MAC equals destination MAC equals platform MAC, so HW
is expected to lookup where to send packet based on IP header.

This approach doesn't work for Spectrum ASIC, instead the hardware drops
packets with source MAC equals destination MAC.

To sent L3 packet from Spectrum switch we use source MAC = 0
(don't care what is the source MAC, source MAC is replaced with
interface MAC), destination MAC = L3 interface MAC,
vlan = L3 interface vlan.

As a workaround for this issue - getEtherInfoForL3Packet() was added to SwSwitch,
untill better solution would be found that works on both platforms.

Depending on which platform we build FBOSS getEtherInfoForL3Packet
will use BCM or Spectrum approach.

Signed-off-by: Stepan Blyschak <stepanb@mellanox.com>

--- a/fboss/agent/hw/mlnx/CMakeLists.txt
+++ b/fboss/agent/hw/mlnx/CMakeLists.txt
@@ -4,6 +4,8 @@ find_library(SW_RM sw_rm)
 find_library(SXDEV sxdev)
 find_library(SXDREGINIT sxdreg_access)
 
+target_compile_definitions(fboss_agent PRIVATE MLNX_PLATFORM)
+
 target_sources(fboss_agent
   PRIVATE
     fboss/agent/hw/mlnx/MlnxInitHelper.cpp
