Summary: Add basic L3 FBOSS feature support for Mellanox platform
  1. Vlan L3 interface (add/edit/delete)
  2. IPv4/IPv6 Route table programming (add/edit/delete)
  3. Neighbor table programming (add/edit/delete)
  4. L3 traffic (ping, NDP, DHCP, etc.)
  5. Reactive ARP/ICMPv6 NDP neighbors resolution triggered by the HW

Signed-off-by: Stepan Blyschak <stepanb@mellanox.com>

--- a/fboss/agent/hw/mlnx/CMakeLists.txt
+++ b/fboss/agent/hw/mlnx/CMakeLists.txt
@@ -18,7 +18,14 @@ target_sources(fboss_agent
     fboss/agent/hw/mlnx/MlnxSwitch.cpp
     fboss/agent/hw/mlnx/MlnxSwitchSpectrum.cpp
     fboss/agent/hw/mlnx/MlnxPort.cpp
+    fboss/agent/hw/mlnx/MlnxVrf.cpp
+    fboss/agent/hw/mlnx/MlnxIntf.cpp
+    fboss/agent/hw/mlnx/MlnxRoute.cpp
+    fboss/agent/hw/mlnx/MlnxNeigh.cpp
     fboss/agent/hw/mlnx/MlnxPortTable.cpp
+    fboss/agent/hw/mlnx/MlnxIntfTable.cpp
+    fboss/agent/hw/mlnx/MlnxRouteTable.cpp
+    fboss/agent/hw/mlnx/MlnxNeighTable.cpp
     fboss/agent/hw/mlnx/MlnxPlatform.cpp
     fboss/agent/hw/mlnx/MlnxPlatformPort.cpp
     fboss/agent/hw/mlnx/MlnxUtils.cpp
