Summary: Make fboss/qsfp_service/Main.cpp qsfpMain() generic
Make qsfpMain() to be able to support differnt QSFP managers for different platforms

Using the same way as in FBOSS agent.
To add new platform:
  - Provide TransceiverImpl and TransceiverManager implementation under fboss/qsfp_service/platforms
  - Provide implementation for std::unique_ptr<TransceiverManager> createTransceiverManager()
  - Provide main.cpp under same directory which calls qsfpMain with createTransceiverManager function as parameter
  - Modify CMakeLists.txt to add rules to build qsfp_service for new platform

Signed-off-by: Stepan Blyschak <stepanb@mellanox.com>

--- a/fboss/qsfp_service/platforms/wedge/CMakeLists.txt
+++ b/fboss/qsfp_service/platforms/wedge/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(qsfp_service
     fboss/qsfp_service/platforms/wedge/Wedge40Manager.cpp
     fboss/agent/platforms/wedge/WedgeProductInfo.cpp
     fboss/agent/platforms/wedge/oss/WedgeProductInfo.cpp
+    fboss/qsfp_service/platforms/wedge/wedge_qsfp.cpp
 )
 
 target_link_libraries(qsfp_service
