Summary: Add support for mlnx to qsfp_service. Add platform code to sync ports between fboss agent and qsfp_service
NOTE: current implementation requires mlnx_agent running before qsfp_service starts.
Also, to be able to gracefully release resources qsfp_service should be closed before mlnx_agent.

Signed-off-by: Stepan Blyschak <stepanb@mellanox.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,6 +341,7 @@ if(BUILD_WEDGE)
     include(fboss/util/CMakeLists.txt)
 elseif(BUILD_MLNX)
     include(fboss/agent/platforms/mlnx/CMakeLists.txt)
+    include(fboss/qsfp_service/platforms/mlnx/CMakeLists.txt)
 endif()
 
 # Unit Testing
